登录之后可以编辑

--- a/blog-api/src/main/resources/application.properties
+++ b/blog-api/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.show-sql=true
 logging.level.org.springframework.web=debug
 logging.level.org.hibernate=error
 logging.file.name=log/myapplication.log
+
+# jwt
+jwt.expire: 3600
+jwt.secret: pa1R0cHM6hyGf8Hyb7D34LKJ8b4gldC91LzM2ODE4Njg
