登录之后可以编辑

--- a/blog-api/src/main/resources/application-local.properties
+++ b/blog-api/src/main/resources/application-local.properties
@@ -2,7 +2,7 @@ spring.application.name=mBlog
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase
 spring.datasource.username=root
-spring.datasource.password=zKCpCqPVJt3@a#mfLF
+spring.datasource.password=2024!chen
 spring.jpa.show-sql=true
 logging.level.org.springframework.web=debug
 logging.level.org.hibernate=error
@@ -11,4 +11,3 @@ logging.file.name=log/myapplication.log
 # jwt
 jwt.expire: 3600
 jwt.secret: pa1R0cHM6hyGf8Hyb7D34LKJ8b4gldC91LzM2ODE4Njg
-spring.profiles.active=dev
