--- a/blog-api/pom.xml
+++ b/blog-api/pom.xml
@@ -89,7 +89,12 @@
 			<version>0.11.2</version>
 			<scope>runtime</scope>
 		</dependency>
-
+		<!-- hutool-crypto -->
+		<dependency>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-crypto</artifactId>
+			<version>5.8.11</version>
+		</dependency>
 	</dependencies>
 
 	<build>
