--- a/blog-api/src/main/resources/application-local.properties
+++ b/blog-api/src/main/resources/application-local.properties
@@ -7,7 +7,11 @@ spring.jpa.show-sql=true
 logging.level.org.springframework.web=debug
 logging.level.org.hibernate=error
 logging.file.name=log/myapplication.log
-
 # jwt
-jwt.expire: 3600
-jwt.secret: pa1R0cHM6hyGf8Hyb7D34LKJ8b4gldC91LzM2ODE4Njg
+jwt.expire:3600
+jwt.secret:pa1R0cHM6hyGf8Hyb7D34LKJ8b4gldC91LzM2ODE4Njg
+#redis
+spring.data.redis.host=localhost
+spring.data.redis.database=0
+spring.data.redis.port=6379
+spring.data.redis.timeout=10000ms
