--- a/blog-api/src/main/resources/application-prod.properties
+++ b/blog-api/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 spring.application.name=mBlog
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase
+spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase?characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=zKCpCqPVJt3@a#mfLF
 spring.jpa.show-sql=true
