--- a/blog-api/src/main/resources/application-prod.properties
+++ b/blog-api/src/main/resources/application-prod.properties
@@ -1,8 +1,8 @@
 spring.application.name=mBlog
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase?characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://mysql:3306/mydatabase?characterEncoding=utf-8&characterSetResults=utf8&autoReconnect=true&useSSL=false&allowMultiQueries=true
 spring.datasource.username=root
-spring.datasource.password=zKCpCqPVJt3@a#mfLF
+spring.datasource.password=123456
 spring.jpa.show-sql=true
 logging.level.org.springframework.web=debug
 logging.level.org.hibernate=error
@@ -11,7 +11,7 @@ logging.file.name=log/myapplication.log
 jwt.expire:3600
 jwt.secret:pa1R0cHM6hyGf8Hyb7D34LKJ8b4gldC91LzM2ODE4Njg
 #redis
-spring.data.redis.host=localhost
+spring.data.redis.host=redis
 spring.data.redis.database=0
 spring.data.redis.port=6379
 spring.data.redis.timeout=10000ms
