--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,4 +1,5 @@
 version: "3"
+
 services:
   nginx: # 服务名称，用户自定义
     image: nginx:1.26.2  # 镜像版本
@@ -13,6 +14,8 @@ services:
       - /home/nginx.conf:/etc/nginx/nginx.conf
       - /usr/local/nginx/cert/ssl.pem:/usr/local/nginx/cert/ssl.pem
       - /usr/local/nginx/cert/ssl.key:/usr/local/nginx/cert/ssl.key
+      - /home/nginx/ssl.pem:/home/nginx/ssl.pem
+      - /home/nginx/ssl.key:/home/nginx/ssl.key
     privileged: true # 这个必须要，解决nginx的文件调用的权限问题
   mysql:
     image: mysql:latest
@@ -31,6 +34,12 @@ services:
     image: redis:latest
 #    container_name: web-redis
     restart: always
+    ports:
+      - 6379:6379
+    volumes:
+       - /usr/local/redis/data:/data
+    networks:
+      - home_default
   server:
     image: server:latest
     build: . # 表示以当前目录下的Dockerfile开始构建镜像
@@ -42,6 +51,12 @@ services:
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/mydatabase?characterEncoding=utf-8&characterSetResults=utf8&autoReconnect=true&useSSL=false&allowMultiQueries=true
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: '123456'
+      SPRING_DATA_REDIS_HOST: redis
     depends_on:
       - mysql
       - redis
+    networks:
+      - home_default
+networks:
+  home_default:
+    external: true
