--- a/blog-cms/package.json
+++ b/blog-cms/package.json
@@ -1,8 +1,8 @@
 {
   "name": "blog-cms",
   "version": "2.0.0",
-  "description": "NBlog cms",
-  "author": "Naccl <i@naccl.top>",
+  "description": "Blog cms",
+  "author": "mblog",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
